virtio-balloon: Add api for free page hinting
Adding API endpoints to manage free page hinting . With
three different endpoint: Start - To begin a new run for free page
hinting, Status - To track the state of the hinting run, Stop - To stop
the hinting run and allow the guest to reclaim the pages reported.
